# sfml-game-example

./: CMakeLists.txt  README.md  main.cpp
src/: main.cpp
